src/components/sidebar/sidebar.module.scss
@import "src/styles/common";

.image {
  height: 160px;
  width: 160px;
  border-radius: 1.25rem;
  margin: 0.5rem auto;

  @include media-breakpoint-up(lg) {
    margin: calc(-7rem + 2px) auto 1.25rem auto;
  }
  border: 1px solid #ccc;
}

.sidebar {
  display: none;
  max-width: 250px;
  @include media-breakpoint-up(lg) {
    display: block;
    position: fixed !important;
    z-index: $zindex-fixed !important;
  }
}

